First step in removing dependency on rosetta.common